--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -5,27 +5,43 @@
     </ng-container>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 4' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 5' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 6' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 7' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 8' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 9' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      {{ 'COMING_SOON' | translate }}
+    </ng-template>
   </nz-tab>
 </nz-tabset>
