--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,7 +1,19 @@
 <div class="page">
   <div>Email: {{ user.email }}</div>
+  <br />
   <div>Name: {{ user.name }}</div>
+  <br />
   <div>Nick name: {{ user.nickname }}</div>
-  <img [style.height.rem]="4" [style.width.rem]="4" [style.border-radius.%]="50" [src]="user.picture" alt="" />
+  <br />
+  <div>Avatar:</div>
+  <img
+    loading="eager"
+    [style.height.rem]="4"
+    [style.width.rem]="4"
+    [style.border-radius.%]="50"
+    [src]="user.picture"
+    alt="Avatar"
+  />
+  <br />
   <div>Updated at: {{ user.updated_at | date: 'hh:mm dd/MM/yyyy' }}</div>
 </div>
