--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -1,6 +1,6 @@
-<nz-tabset [nzAnimated]="true">
+<nz-tabset [nzAnimated]="false">
   <nz-tab [nzTitle]="'HSK 1' | translate">
-    <app-vocabulary-list [vocabularyList]="hsk1Vocabulary"></app-vocabulary-list>
+    <app-vocabulary-list [vocabularyList]="hsk1Vocabulary$ | async"></app-vocabulary-list>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
     <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
