--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -1,4 +1,4 @@
-<nz-tabset [nzAnimated]="true">
+<nz-tabset [nzAnimated]="false">
   <nz-tab [nzTitle]="'HSK 1' | translate">
     <app-audio-list [audio]="hsk1Audio"></app-audio-list>
   </nz-tab>
