--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="authService.loading$ | async"><nz-spin nzSimple></nz-spin></ng-container>
 <div class="main">
   <nav class="navbar">
     <div>
