--- a/src/app/shared/vocabulary-list/vocabulary-list.component.html
+++ b/src/app/shared/vocabulary-list/vocabulary-list.component.html
@@ -1,17 +1,18 @@
-<div class="tab-content">
-  <nz-collapse nzExpandIconPosition="right" nzBordered="true">
-    <ng-container *ngIf="!vocabularyList"><nz-spin nzSimple></nz-spin></ng-container>
-    <ng-container *ngIf="vocabularyList"></ng-container>
-    <nz-collapse-panel *ngFor="let vocabulary of vocabularyList" [nzHeader]="vocabulary.name" [nzActive]="false">
-      <ul class="wordList">
-        <li *ngFor="let word of vocabulary.words" class="word">
-          <span class="word--name">{{ word.name }}</span>
-          <div class="wrap">
-            <span class="word--pinyin">{{ word.pinyin }}</span>
-            <span class="word--define">{{ word.define | translate }}</span>
-          </div>
-        </li>
-      </ul>
-    </nz-collapse-panel>
-  </nz-collapse>
-</div>
+<ng-container *ngIf="!vocabularyList"><nz-spin nzSimple></nz-spin></ng-container>
+<ng-container *ngIf="vocabularyList">
+  <div class="tab-content">
+    <nz-collapse nzExpandIconPosition="right" nzBordered="true">
+      <nz-collapse-panel *ngFor="let vocabulary of vocabularyList" [nzHeader]="vocabulary.name" [nzActive]="false">
+        <ul class="wordList">
+          <li *ngFor="let word of vocabulary.words" class="word">
+            <span class="word--name">{{ word.name }}</span>
+            <div class="wrap">
+              <span class="word--pinyin">{{ word.pinyin }}</span>
+              <span class="word--define">{{ word.define | translate }}</span>
+            </div>
+          </li>
+        </ul>
+      </nz-collapse-panel>
+    </nz-collapse>
+  </div>
+</ng-container>
