--- a/src/app/shared/vocabulary-list/vocabulary-list.component.html
+++ b/src/app/shared/vocabulary-list/vocabulary-list.component.html
@@ -1,10 +1,16 @@
-<ng-container *ngIf="!vocabularyList"><nz-spin nzSimple></nz-spin></ng-container>
+<ng-container *ngIf="!vocabularyList">
+  <nz-spin nzSimple></nz-spin>
+</ng-container>
 <ng-container *ngIf="vocabularyList">
   <div class="tab-content">
-    <nz-collapse nzExpandIconPosition="right" nzBordered="true">
-      <nz-collapse-panel *ngFor="let vocabulary of vocabularyList" [nzHeader]="vocabulary.name" [nzActive]="false">
+    <nz-collapse nzExpandIconPosition="right"
+                 nzBordered="true">
+      <nz-collapse-panel *ngFor="let vocabulary of vocabularyList"
+                         [nzHeader]="vocabulary.name"
+                         [nzActive]="false">
         <ul class="wordList">
-          <li *ngFor="let word of vocabulary.words" class="word">
+          <li *ngFor="let word of vocabulary.words"
+              class="word">
             <span class="word--name">{{ word.name }}</span>
             <div class="wrap">
               <span class="word--pinyin">{{ word.pinyin }}</span>
