--- a/src/app/shared/audio-list/audio-list.component.html
+++ b/src/app/shared/audio-list/audio-list.component.html
@@ -1,37 +1,44 @@
-<ng-container *ngIf="audio.isLoading"><nz-spin nzSimple></nz-spin></ng-container>
+<ng-container *ngIf="audio.isLoading">
+  <nz-spin nzSimple></nz-spin>
+</ng-container>
 <ng-container *ngIf="!audio.isLoading">
   <div class="tab-content">
-    <div class="controls" *ngIf="selectedAudio">
+    <div class="controls"
+         *ngIf="selectedAudio">
       <h4 class="audio__title">{{ selectedAudio.title | translate }}</h4>
-      <audio controls autoplay preload="none" [attr.src]="selectedAudio.url">
-        <source [src]="[selectedAudio.url]" type="audio/mpeg" />
+      <audio controls
+             autoplay
+             preload="none"
+             [attr.src]="selectedAudio.url">
+        <source [src]="[selectedAudio.url]"
+                type="audio/mpeg" />
         Your browser does not support the audio element.
       </audio>
     </div>
-    <div class="controls" *ngIf="!selectedAudio">
-      <h4 class="audio__title">{{ 'SELECT' | translate }} <i nz-icon nzType="heart" nzTheme="outline"></i></h4>
+    <div class="controls"
+         *ngIf="!selectedAudio">
+      <h4 class="audio__title">{{ 'SELECT' | translate }} <i nz-icon
+           nzType="heart"
+           nzTheme="outline"></i></h4>
       <audio controls>
         <source type="audio/mpeg" />
         Your browser does not support the audio element.
       </audio>
     </div>
     <div class="pagination">
-      <pagination-controls
-        (pageChange)="currentPage = $event"
-        previousLabel="<"
-        nextLabel=">"
-        [maxSize]="6"
-        [directionLinks]="false"
-        [autoHide]="true"
-        [responsive]="false"
-      ></pagination-controls>
+      <pagination-controls (pageChange)="currentPage = $event"
+                           previousLabel="<"
+                           nextLabel=">"
+                           [maxSize]="6"
+                           [directionLinks]="false"
+                           [autoHide]="true"
+                           [responsive]="false"></pagination-controls>
     </div>
-    <div class="audio-list" [ngStyle]="{ 'grid-auto-rows': audio.height }">
-      <ul
-        *ngFor="let audio of audio.list | paginate: { itemsPerPage: 16, currentPage: currentPage }"
-        class="audio"
-        (click)="onSelect(audio)"
-      >
+    <div class="audio-list"
+         [ngStyle]="{ 'grid-auto-rows': audio.height }">
+      <ul *ngFor="let audio of audio.list | paginate: { itemsPerPage: 16, currentPage: currentPage }"
+          class="audio"
+          (click)="onSelect(audio)">
         <strong class="audio__title">{{ audio.title | translate }}</strong>
         <nz-divider></nz-divider>
         <p class="audio__description">{{ audio.description }}</p>
