--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -1,10 +1,14 @@
 <aside class="page">
   <ul>
+    <p>Facebook</p>
+    <a class="info" target="_blank" href="https://www.facebook.com/lqtoann">
+      <i nz-icon nzType="facebook" nzTheme="fill"></i>
+    </a>
     <p>Email</p>
     <a class="info" target="_blank" href="mailto:lqtoan37@gmail.com">
       <i nz-icon nzType="mail" nzTheme="fill"></i>
     </a>
-    <span>Linkedin</span>
+    <p>Linkedin</p>
     <a class="info" target="_blank" href="https://www.linkedin.com/in/lqtoan/">
       <i nz-icon nzType="linkedin" nzTheme="fill"></i>
     </a>
