--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -1,10 +1,12 @@
 <nz-tabset [nzAnimated]="false">
   <nz-tab [nzTitle]="'HSK 1' | translate">
-    <app-audio-list [audio]="hsk1Audio"></app-audio-list>
+    <ng-template nz-tab>
+      <app-audio-list [audio]="hsk1Audio"></app-audio-list>
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
     <ng-template nz-tab>
-      {{ 'COMING_SOON' | translate }}
+      <app-audio-list [audio]="hsk2Audio"></app-audio-list>
     </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
