--- a/src/app/pages/main-page.component.html
+++ b/src/app/pages/main-page.component.html
@@ -25,4 +25,11 @@
       Copyright {{ year | date: 'yyyy' }} &copy; {{ 'FOOTER' | translate }}
     </small>
   </footer>
+  <a class="facebook"
+     target="_blank"
+     href="https://www.facebook.com/lqtoann">
+    <i nz-icon
+       nzType="facebook"
+       nzTheme="fill"></i>
+  </a>
 </div>
