--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -56,6 +56,23 @@
     align-items: baseline;
   }
 
+  .facebook {
+    position: absolute;
+    right: 2rem;
+    bottom: 7.5vh;
+    width: 2rem;
+    height: 2rem;
+    line-height: 2rem;
+    text-align: center;
+    color: $white;
+    background: $primary-color;
+    border-radius: 50%;
+    transition: $transition;
+  }
+  .facebook:hover {
+    transform: translateY(-2px);
+  }
+
   @media screen and (max-width: $tablet) {
     .navbar {
       padding: 1rem 4rem;
