--- a/src/app/pages/vocabulary/vocabulary.component.html
+++ b/src/app/pages/vocabulary/vocabulary.component.html
@@ -1,9 +1,15 @@
-<nz-tabset [nzAnimated]="false">
+<nz-tabset [nzAnimated]="true">
   <nz-tab [nzTitle]="'HSK 1' | translate">
-    <app-vocabulary-list [vocabularyList]="hsk1Vocabulary$ | async"></app-vocabulary-list>
+    <ng-template nz-tab>
+      <app-vocabulary-list [isLoading]="isLoading"
+                           [vocabularyList]="hsk1Vocabulary"></app-vocabulary-list>
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 2' | translate">
-    <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
+    <ng-template nz-tab>
+      <app-vocabulary-list [isLoading]="isLoading"
+                           [vocabularyList]="hsk2Vocabulary"></app-vocabulary-list>
+    </ng-template>
   </nz-tab>
   <nz-tab [nzTitle]="'HSK 3' | translate">
     <ng-template nz-tab> {{ 'COMING_SOON' | translate }}</ng-template>
