--- a/src/app/pages/main-page.component.scss
+++ b/src/app/pages/main-page.component.scss
@@ -58,11 +58,12 @@
 
   .facebook {
     position: absolute;
-    right: 2rem;
+    right: 4rem;
     bottom: 7.5vh;
-    width: 2rem;
-    height: 2rem;
-    line-height: 2rem;
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    line-height: 3rem;
     text-align: center;
     color: $white;
     background: $primary-color;
@@ -79,6 +80,9 @@
     }
     .footer {
       padding: 1rem 4rem;
+    }
+    .facebook {
+      right: 1rem;
     }
   }
 
