--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -5,7 +5,7 @@
   }
   .ant-tabs-top > .ant-tabs-nav {
     margin-bottom: 0.5rem;
-    box-shadow: 0 1px 25px 1px rgba($color: $gray, $alpha: 0.1);
+    box-shadow: 0 1px 25px 1px rgba($color: $black, $alpha: 0.1);
   }
   .ant-tabs-ink-bar {
     background: $linear-gradient;
