--- a/src/app/shared/audio-list/audio-list.component.html
+++ b/src/app/shared/audio-list/audio-list.component.html
@@ -41,8 +41,16 @@
           (click)="onSelect(audio)">
         <strong class="audio__title">{{ audio.title | translate }}</strong>
         <nz-divider></nz-divider>
-        <span *ngFor="let item of audio.description"
-              class="audio__description">{{ item }}</span>
+        <div *ngFor="let item of audio.text; even as isEven; count as total"
+             class="audio__description">
+          <ng-container *ngIf="total > 1; else notText">
+            <span [style.color]="'#81A1C1'"
+                  *ngIf="isEven">A: {{ item }}</span>
+            <span [style.color]="'#A3BE8C'"
+                  *ngIf="!isEven">B: {{ item }}</span>
+          </ng-container>
+          <ng-template #notText>{{ item }}</ng-template>
+        </div>
       </ul>
     </div>
   </div>
