--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,14 +4,76 @@ $black: #2e3440;
 $white: #eceff4;
 $second-white: #d8dee9;
 $primary-color: #b48ead;
-$gray: #4C566A;
-$red: #BF616A;
+$gray: #4c566a;
+$red: #bf616a;
 
-$linear-gradient: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #88C0D0, $alpha: 0.75));
-$white-linear-gradient: linear-gradient(135deg, rgba($color: $second-white, $alpha: 1), rgba($color: $second-white, $alpha: 0.5));
-$magenta-blue-linear-gradient: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 1), rgba($color: #5E81AC, $alpha: 0.75), rgba($color: #88C0D0, $alpha: 0.75));
-$blue-linear-gradient: linear-gradient(135deg, rgba($color: #5E81AC, $alpha: 1), rgba($color: #88C0D0, $alpha: 1));
-$magenta-blue-white-linear-gradient: linear-gradient(135deg, rgba($color: $primary-color, $alpha: 0.5), rgba($color: #81A1C1, $alpha: 0.375), rgba($color: #88C0D0, $alpha: 0.375), rgba($color: $second-white, $alpha: 1));
+$linear-gradient: linear-gradient(
+  135deg,
+  rgba(
+    $color: $primary-color,
+    $alpha: 1,
+  ),
+  rgba(
+    $color: #88c0d0,
+    $alpha: 0.75,
+  )
+);
+$white-linear-gradient: linear-gradient(
+  135deg,
+  rgba(
+    $color: $second-white,
+    $alpha: 1,
+  ),
+  rgba(
+    $color: $second-white,
+    $alpha: 0.5,
+  )
+);
+$magenta-blue-linear-gradient: linear-gradient(
+  135deg,
+  rgba(
+    $color: $primary-color,
+    $alpha: 1,
+  ),
+  rgba(
+    $color: #5e81ac,
+    $alpha: 0.75,
+  ),
+  rgba(
+    $color: #88c0d0,
+    $alpha: 0.75,
+  )
+);
+$blue-linear-gradient: linear-gradient(
+  135deg,
+  rgba(
+    $color: #5e81ac,
+    $alpha: 1,
+  ),
+  rgba(
+    $color: #88c0d0,
+    $alpha: 1,
+  )
+);
+$magenta-blue-white-linear-gradient: linear-gradient(
+  135deg,
+  rgba(
+    $color: $primary-color,
+    $alpha: 0.5,
+  ),
+  rgba(
+    $color: #81a1c1,
+    $alpha: 0.375,
+  ),
+  rgba(
+    $color: #88c0d0,
+    $alpha: 0.375,
+  ),
+  rgba(
+    $color: $second-white,
+    $alpha: 1,
+  )
+);
 
 $primary-font: 'Quicksand', sans-serif;
 $font-size: 100%;
