apply component store

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,21 @@
   <app-change-language></app-change-language>
 
   <div class="cards">
-    <div routerLink="/vocabulary" class="card">{{ 'VOCABULARY' | translate }}</div>
-    <div routerLink="/curriculum" class="card">{{ 'CURRICULUM' | translate }}</div>
-    <div routerLink="/exercise" class="card">{{ 'EXERCISE' | translate }}</div>
-    <div routerLink="/about" class="card">{{ 'ABOUT' | translate }}</div>
+    <div routerLink="/vocabulary"
+         class="card">
+      <span>{{ 'VOCABULARY' | translate }}</span>
+    </div>
+    <div routerLink="/curriculum"
+         class="card">
+      <span>{{ 'CURRICULUM' | translate }}</span>
+    </div>
+    <div routerLink="/exercise"
+         class="card">
+      <span>{{ 'EXERCISE' | translate }}</span>
+    </div>
+    <div routerLink="/about"
+         class="card">
+      <span>{{ 'ABOUT' | translate }}</span>
+    </div>
   </div>
 </div>
