--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,14 +11,17 @@
     color: $black;
     font-size: 1rem;
     font-weight: 800;
-    box-shadow: 1px 1px 5px 1px rgba($color: $gray, $alpha: 0.25);
-    border-radius: 1rem;
+    box-shadow: 0px 2px 5px 1px rgba($color: $gray, $alpha: 0.25);
+    border-radius: 0.5rem;
+    transition: $transition;
     span {
       transition: $transition;
     }
   }
   .card:hover {
     cursor: pointer;
+    box-shadow: 0 2px 10px 0px rgba($color: $primary-color, $alpha: 0.75),
+      0 5px 5px 1px rgba($color: #88c0d0, $alpha: 0.5);
     span {
       background: $linear-gradient;
       background-clip: text;
