--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -10,7 +10,7 @@
     padding: 2rem 1rem;
     color: $black;
     font-size: 1rem;
-    font-weight: 800;
+    font-weight: 600;
     box-shadow: 0px 2px 5px 1px rgba($color: $gray, $alpha: 0.25);
     border-radius: 0.5rem;
     transition: $transition;
@@ -20,10 +20,11 @@
   }
   .card:hover {
     cursor: pointer;
-    box-shadow: 0 2px 10px 0px rgba($color: $primary-color, $alpha: 0.75),
-      0 5px 5px 1px rgba($color: #88c0d0, $alpha: 0.5);
+    box-shadow: 0 2px 10px 0px rgba($color: $primary-color, $alpha: 1),
+      0 5px 10px 1px rgba($color: #88c0d0, $alpha: 0.75);
     span {
-      background: $linear-gradient;
+      font-weight: 700;
+      background: $magenta-blue-linear-gradient;
       background-clip: text;
       -webkit-text-fill-color: transparent;
     }
@@ -33,9 +34,7 @@
 @media screen and (max-width: $mobile) {
   .cards {
     padding: 1rem 0;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-flow: row;
-    grid-gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0.5rem;
   }
 }
