--- a/src/app/shared/audio-list/audio-list.component.scss
+++ b/src/app/shared/audio-list/audio-list.component.scss
@@ -16,13 +16,13 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: flex-start;
     box-shadow: 1px 1px 0 0 $second-white;
     border-radius: 0.5rem;
     .audio__title {
       color: $white;
-      margin-bottom: 0.5rem;
+      // margin-bottom: 0.5rem;
     }
     audio {
       width: 100%;
@@ -60,8 +60,8 @@
   }
 
   .audio-list {
-    padding-right: 0.5rem;
     height: calc(60vh - 7rem);
+    background: rgba($color: $white, $alpha: 0.1);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-flow: row;
@@ -115,7 +115,7 @@
   .tab-content {
     padding: 0.5rem 0;
     .controls {
-      padding: 0 1rem;
+      padding: 1rem;
     }
     .audio-list {
       grid-template-columns: repeat(1, 1fr);
