add course page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,6 +15,10 @@
          class="card">
       <span>{{ 'EXERCISE' | translate }}</span>
     </div>
+    <div routerLink="/course"
+         class="card">
+      <span>{{ 'COURSE' | translate }}</span>
+    </div>
     <div routerLink="/about"
          class="card">
       <span>{{ 'ABOUT' | translate }}</span>
