--- a/src/app/pages/course/course-form/course-form.component.html
+++ b/src/app/pages/course/course-form/course-form.component.html
@@ -1,11 +1,63 @@
 <nz-drawer [nzClosable]="true"
            [nzVisible]="(isVisibleForm$ | async)!"
            nzPlacement="right"
-           nzTitle="Basic Drawer"
+           nzWidth="calc(25vw + 200px)"
+           nzTitle="Create"
            (nzOnClose)="onClose()">
   <ng-container *nzDrawerContent>
-    <p>Some contents...</p>
-    <p>Some contents...</p>
-    <p>Some contents...</p>
+    <form nz-form
+          [formGroup]="courseForm"
+          [nzLayout]="'vertical'">
+      <div nz-row
+           [nzGutter]="16">
+        <div nz-col
+             nzSpan="24">
+          <nz-form-item>
+            <nz-form-label nzRequired
+                           nzFor="name">{{'COURSE.NAME' | translate }}</nz-form-label>
+            <nz-form-control [nzErrorTip]="errorName">
+              <input nz-input
+                     placeholder="{{ 'INPUT.PLACE_HOLDER' | translate }}"
+                     id="name"
+                     formControlName="name">
+              <ng-template #errorName
+                           let-control>
+                <ng-container *ngIf="control.touched && control.hasError('required')">
+                  {{ 'INPUT.PLACE_HOLDER' | translate }}
+                </ng-container>
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+
+        <div nz-col
+             nzSpan="12">
+          <nz-form-item>
+            <nz-form-label nzRequired>{{'COURSE.PRICE' | translate }}</nz-form-label>
+            <nz-form-control>
+              <nz-input-number [(ngModel)]="initValue"
+                               [nzMin]="100000"
+                               [nzStep]="10000"
+                               formControlName="price"></nz-input-number>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+
+        <div nz-col
+             nzSpan="12">
+          <nz-form-item>
+            <nz-form-label nzRequired>{{'COURSE.BEGIN' | translate }}</nz-form-label>
+            <nz-form-control>
+              <nz-date-picker [(ngModel)]="initDate"
+                              (ngModelChange)="onChange($event)"
+                              formControlName="begin"></nz-date-picker>
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+      </div>
+    </form>
+    <button [disabled]="courseForm.invalid"
+            nz-button
+            (click)="onSubmit()">Create</button>
   </ng-container>
 </nz-drawer>
