--- a/src/app/pages/course/course-form/course-form.component.html
+++ b/src/app/pages/course/course-form/course-form.component.html
@@ -36,7 +36,7 @@
             <nz-form-label nzRequired>{{'COURSE.PRICE' | translate }}</nz-form-label>
             <nz-form-control>
               <nz-input-number [nzMin]="100000"
-                               [nzStep]="10000"
+                               [nzStep]="50000"
                                formControlName="price"></nz-input-number>
             </nz-form-control>
           </nz-form-item>
@@ -47,7 +47,8 @@
           <nz-form-item>
             <nz-form-label nzRequired>{{'COURSE.BEGIN' | translate }}</nz-form-label>
             <nz-form-control>
-              <nz-date-picker formControlName="begin"></nz-date-picker>
+              <nz-date-picker formControlName="begin"
+                              nzShowTime></nz-date-picker>
             </nz-form-control>
           </nz-form-item>
         </div>
