--- a/src/app/pages/course/course-form/course-form.component.scss
+++ b/src/app/pages/course/course-form/course-form.component.scss
@@ -28,6 +28,10 @@ nz-date-picker {
   width: 100%;
 }
 
+nz-time-picker {
+  width: 100%;
+}
+
 .ant-picker:hover,
 .ant-picker:focus {
   border-color: $primary-color;
