--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,10 @@
   <app-change-language></app-change-language>
 
   <div class="cards">
+    <div routerLink="/dictionary"
+         class="card">
+      <span>{{ 'DICTIONARY' | translate }}</span>
+    </div>
     <div routerLink="/vocabulary"
          class="card">
       <span>{{ 'VOCABULARY' | translate }}</span>
